# claude-code-notification

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deno.json  main.test.ts  main.ts
.github/workflows/: main.yaml  publish.yml  test.yml
examples/: test-notification.rs
src/: error.rs  lib.rs  main.rs  setup.rs
