[package]
name = "claude-code-notification"
version = "0.2.0"
edition = "2021"
authors = ["Wyatt Johnson"]
description = "Claude Code hook for displaying macOS desktop notifications"
license = "MIT"
repository = "https://github.com/wyattjoh/claude-code-notifier"
keywords = ["cli", "claude", "notifications", "hooks", "macos"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "claude-code-notification"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
notify-rust = "4.0"
inquire = "0.7.5"

[dev-dependencies]
tempfile = "3.0"
jsonschema = "0.33"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
